--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 <title>My Personal Website</title>
 </head>
 <body>
-fill
+<header>
+<h1>Welcome to My Website</h1>
+<nav>
+<ul>
+<li><a href="#home">Home</a></li>
+<li><a href="#about">About</a></li>
+<li><a href="#contact">Contact</a></li>
+<li><a href="#blog">Blog</a></li>
+</ul>
+</nav>
+</header>
 </body>
 </html>
