--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>My Favorite Movies</title>
 </head>
 <body>
-    <h2><a href="./Lab3/pgm2.html">My Favorite Movies</a>/h2>
+    <h2><a href="./Lab3/pgm2.html">My Favorite Movies</a></h2>
     <ul>
         <li>Avengers:EndGame</li>
         <li>Leo</li>
