--- a/Lab3/pgm2.html
+++ b/Lab3/pgm2.html
@@ -5,6 +5,12 @@
 </head>
 <body>
     <h2>My Favorite Movies</h2>
+    <ul>
+        <li>Thupaki</li>
+        <li>Leo</li>
+        <li>Master</li>
+    </ul>
+    <h2>My Favorite Movies</h2>
     <ol>
         <li>Thupaki</li>
         <li>Leo</li>
