--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Favorite Movies</title>
+    <title>Lab3 codes</title>
 </head>
 <body>
     <h2><a href="./Lab3/pgm2.html">My Favorite Movies</a></h2>
-    <ul>
-        <li>Avengers:EndGame</li>
-        <li>Leo</li>
-        <li>Master</li>
-    </ul>
+    <h2><a href="./Lab3/pgm2.html">My Favorite Movies</a></h2>
 </body>
 </html>
