--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h2><a href="./Lab3/pgm2.html">My Favorite Movies</a></h2>
-    <h2><a href="./Lab3/pgm2.html">My Favorite Movies</a></h2>
+    <h2><a href="./Lab3/pgm4.html">Student Tables</a></h2>
 </body>
 </html>
