--- a/Lab3/pgm4.html
+++ b/Lab3/pgm4.html
@@ -1,23 +1,26 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Favorite Movies</title>
+</head>
+<body>
 <table border="1">
 <tr>
 <th>Name</th>
-<th>Math</th>
-<th>Science</th>
-<th>English</th>
-<th>Total</th>
+<th>Scores</th>
 </tr>
 <tr>
-<td>Alice</td>
-<td>90</td>
-<td>85</td>
-<td>88</td>
-<td>263</td>
+<td>Asrith</td>
+<td>100</td>
 </tr>
 <tr>
-<td>Bob</td>
-<td>75</td>
-<td>80</td>
-<td>70</td>
-<td>225</td>
+<td>AadithyaGB</td>
+<td>100</td>
+</tr>
+<td>Charan</td>
+<td>infinity</td>
 </tr>
 </table>
+</body>
+</html>
+
