--- a/Lab3/pgm4.html
+++ b/Lab3/pgm4.html
@@ -17,8 +17,8 @@
 <td>AadithyaGB</td>
 <td>100</td>
 </tr>
-<td>Charan</td>
-<td>infinity</td>
+<td><b>Charan</b></td>
+<td><b>INFINITY</b></td>
 </tr>
 </table>
 </body>
