--- a/Lab3/pgm4.html
+++ b/Lab3/pgm4.html
@@ -17,8 +17,8 @@
 <td>AadithyaGB</td>
 <td>100</td>
 </tr>
-<td><b>Charan</b></td>
-<td><b>INFINITY</b></td>
+<td><b><h1>Charan</h1></b></td>
+<td><b><h1>INFINITY</h1></b></td>
 </tr>
 </table>
 </body>
