--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>Lab3 codes</title>
 </head>
 <body>
+    <nav>
     <h2><a href="./Lab3/pgm2.html">My Favorite Movies</a></h2>
     <h2><a href="./Lab3/pgm4.html">Student Tables</a></h2>
+    </nav>
 </body>
 </html>
