--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
     <nav>
-    <h2><a href="./Lab3/pgm2.html">My Favorite Movies</a></h2>   
-    <h2><a href="./Lab3/pgm4.html">Student Tables</a></h2>
+    <a href="./Lab3/pgm2.html">My Favorite Movies</a>  
+    <a href="./Lab3/pgm4.html">Student Tables</a>
     </nav>
 </body>
 </html>
