--- a/Lab3/pgm6.html
+++ b/Lab3/pgm6.html
@@ -4,22 +4,7 @@
     <title>My Favorite Movies</title>
 </head>
 <body>
-<table border="1">
-<tr>
-<th>Name</th>
-<th>Scores</th>
-</tr>
-<tr>
-<td>Asrith</td>
-<td>100</td>
-</tr>
-<tr>
-<td>AadithyaGB</td>
-<td>100</td>
-</tr>
-<td><b><h1>Charan</h1></b></td>
-<td><b><h1>INFINITY</h1></b></td>
-</tr>
-</table>
+    <div id="1">
+    <div id="2">
 </body>
 </html>
