--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <nav>
     <a href="./Lab3/pgm2.html">My Favorite Movies</a>  
     <a href="./Lab3/pgm4.html">Student Tables</a>
+    <a href="./Lab3/pgm6.html">Charan pooki</a>
     </nav>
 </body>
 </html>
